PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_WAC_Change_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WAC Change Line Items</relationshipLabel>
        <relationshipName>WAC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contr_IntDesc__c</fullName>
        <label>Contr.IntDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contr_Number__c</fullName>
        <label>Contr.Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contr_Price__c</fullName>
        <label>Contr.Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Price_Diff__c</fullName>
        <label>Contract Price Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval_Remarks__c</fullName>
        <label>Contracts Approval Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval__c</fullName>
        <label>Contracts Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Comments__c</fullName>
        <label>Contracts Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cust_Name__c</fullName>
        <label>Cust Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cust_Number__c</fullName>
        <label>Cust Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response_Date__c</fullName>
        <label>Customer Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response_Status__c</fullName>
        <label>Customer Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Update_Approval__c</fullName>
        <label>Customer Update Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Update_Remarks__c</fullName>
        <label>Customer Update Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date_Offer_Sent__c</fullName>
        <label>Date Offer Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date_Posted_in_Vistex__c</fullName>
        <label>Date Posted in Vistex</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Contracts_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Contracts Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Customer_Update_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Customer Update Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Head_of_PM_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Head of PM Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Vistex_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Vistex Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Head_of_PM_Comments__c</fullName>
        <label>Head of PM Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Head_of_PM_Group_Approval__c</fullName>
        <label>Head of PM Group Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Rejection_Noti_All_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Rejection Noti sent all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Matl_No__c</fullName>
        <label>Matl No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC11__c</fullName>
        <label>NDC11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPR</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>WAC Change Line Items</relationshipLabel>
        <relationshipName>WAC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Offer_Letter_Sent__c</fullName>
        <label>Offer Letter Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Old_Contract_price__c</fullName>
        <label>Old Contract price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Old_WAC__c</fullName>
        <label>Old WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>WAC Change Line Items</relationshipLabel>
        <relationshipName>WAC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Contr_Price__c</fullName>
        <label>Proposed Contr.Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_WAC__c</fullName>
        <label>Proposed WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SysContPrice_Vs_UploadContrPrice__c</fullName>
        <label>Sys Contr.Price Vs Uploaded Contr.Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SysContrPrice_Vs_PropContrPrice__c</fullName>
        <label>Sys Contr.Price Vs Proposed Contr.Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SysWAC_Vs_UploadedWAC__c</fullName>
        <label>Sys WAC Vs Uploaded WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sys_WAC_Vs_Proposed_WAC__c</fullName>
        <label>Sys WAC Vs Proposed WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_System_Contract_price__c</fullName>
        <label>System Contract price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_System_WAC__c</fullName>
        <label>System WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Uploaded_Contr_Price__c</fullName>
        <label>Uploaded Contr.Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Uploaded_WAC__c</fullName>
        <label>Uploaded WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Remarks__c</fullName>
        <label>Vistex Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Update_Approval__c</fullName>
        <label>Vistex Update Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Not updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Change</label>
        <referenceTo>Phoenix_WAC_Change__c</referenceTo>
        <relationshipLabel>WAC Change Line Items</relationshipLabel>
        <relationshipName>WAC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Diff__c</fullName>
        <label>WAC Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Line_Item_Approval_Status__c</fullName>
        <label>WAC Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Customner&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts Pending</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Pending</fullName>
                </value>
                <value>
                    <fullName>Customer Service Pending</fullName>
                </value>
                <value>
                    <fullName>Finance Pending</fullName>
                </value>
                <value>
                    <fullName>Marketing Rejected</fullName>
                </value>
                <value>
                    <fullName>SCM &amp; Marketing Pending</fullName>
                </value>
                <value>
                    <fullName>SCM Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_is_Vistex_Noti_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Vistex Noti sent all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>WAC Change Line Items</relationshipLabel>
        <relationshipName>WAC_Change_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WAC Change Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WAC Change Line-{000000}</displayFormat>
        <label>WAC Change Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC Change Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>